--- a/creatine.html
+++ b/creatine.html
@@ -2,7 +2,7 @@
 
 <head>
 
-    <title>creatine</title>
+    <title>Creatine</title>
 
 <body>
     <img src="ab.jpg" align="right" height="300" width="400">
