--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='manifest' href='./manifest.json'>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>OG</title>
   <style>
     body {
       margin: 0;
