--- a/secpage.html
+++ b/secpage.html
@@ -19,11 +19,10 @@
 <div class="bg">
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 <h1><a href="thirdpage.html">Exercises</a></h1>
-<h1><a href="deep1.html">Diet</a></h1>
-<h1><a href="deep1.html">Protein</a></h1>
-<h1><a href="deep1.html">BMI Calculator</a></h1>
-<h1><a href="deep1.html">Calorie Meter</a></h1>
-<h1><a href="deep1.html">Contact</a></h1>
+<h1><a href="dietpage.html">Diet</a></h1>
+<h1><a href="bmi.html">BMI Calculator</a></h1>
+<h1><a href="calorie.html">Calorie Meter</a></h1>
+<h1><a href="basemetabolicrate.html">Base Metabolic Rate Calculator</a></h1>
 </div>
 </body>
 </center>
