--- a/secpage.html
+++ b/secpage.html
@@ -1,29 +1,31 @@
 <html>
-<head>
-<style>
- .bg
-{
-  background-image: url("./images/pic2.jpg");
-  background-color: black;
-  height: 1000px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
 
-</style
+<head>
+  <style>
+    .bg {
+      background-image: url("./images/pic2.jpg");
+      background-color: black;
+      height: 1000px;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      position: relative;
+    }
+  </style>
 </head>
+
 <body>
-<center>
-<div class="bg">
-<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-<h1><a href="thirdpage.html">Exercises</a></h1>
-<h1><a href="dietpage.html">Diet</a></h1>
-<h1><a href="bmi.html">BMI Calculator</a></h1>
-<h1><a href="calorie.html">Calorie Meter</a></h1>
-<h1><a href="basemetabolicrate.html">Base Metabolic Rate Calculator</a></h1>
-</div>
+  <center>
+    <div class="bg">
+      <br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+      <h1><a href="thirdpage.html">Exercises</a></h1>
+      <h1><a href="dietpage.html">Diet</a></h1>
+      <h1><a href="bmi.html">BMI Calculator</a></h1>
+      <h1><a href="calorie.html">Calorie Meter</a></h1>
+      <h1><a href="basemetabolicrate.html">Base Metabolic Rate Calculator</a></h1>
+      <h1><a href="Nutrition_needed.html">Nutrition Requirements</a></h1>
+    </div>
 </body>
 </center>
+
 </html>
