--- a/index.html
+++ b/index.html
@@ -1,54 +1,76 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <link rel='manifest' href='./manifest.json'>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>OG</title>
+  <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
   <style>
-    body {
-      margin: 0;
-      font-family: arial, Helvetica, sans-serif;
-    }
-
-    .hero-image {
-      background-image: url("./images/pic1.jpg");
-      background-color: black;
-      height: 1500px;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
+    .backimage {
       position: relative;
+      width: 98vw;
+      height: 100vw;
+      filter: sepia(30%) saturate(100%) brightness(90%) hue-rotate(0deg);
     }
 
-    .hero-text {
-      text-align: center;
+    .imgtxt {
       position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      top: 12vw;
+      left: 65vw;
+      text-align: center;
+      color: white;
+      font-family: 'Special Elite', cursive;
+      font-size: 4.5vw;
+    }
+
+    .letsroll {
+      position: absolute;
+      top: 70vw;
+      left: 10vw;
+      border: 4px solid;
+      border-radius: 10px;
+      padding: 20px;
+      font-family: 'Special Elite', cursive;
+      font-size: 5vw;
+    }
+    
+    ,.letsroll:hover{
+      transform: scale(0.1);
+    }
+
+    .letsroll a {
+      color: white;
+    }
+
+    .aboutpage {
+      position: absolute;
+      top: 70vw;
+      left: 60vw;
+      border: 4px solid;
+      border-radius: 10px;
+      padding: 20px;
+      font-family: 'Special Elite', cursive;
+      font-size: 5vw;
+    }
+
+    .aboutpage a {
       color: white;
     }
   </style>
+
 </head>
 
 <body>
 
-  <div class="hero-image">
-    <div class="hero-text">
-      <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-      <u><b>
-          <h1 style="font-size:100px;color:black;font-family:brush script m7"><u><b>WELCOME TO THE GYM</u>
-        </b></h1>
-        <h1 style="font-size:50px;font-family:forte">Explore The Unseen</h1>
-        <h1 style="font-size:50px;font-family:forte">Never Stop Exploring..</h1>
-        <form action="secpage.html">
-          <button type="submit">Next</button>
-        </form><br /><br />
-        <form action="abtpage.html">
-          <button type="submit">About</button>
-        </form>
+  <div class="container">
+    <img src="./images/pic1.jpg" alt="gym pic" class="backimage" />
+    <div class="imgtxt">
+      <h1>The Own Gym</h1>
+      <p>Pump it up.</p>
     </div>
+    <div class="letsroll"><a href="secpage.html">Let's Roll</a></div>
+    <div class="aboutpage"><a href="abtpage.html">About</a></div>
   </div>
 
   <script>
