--- a/secpage.html
+++ b/secpage.html
@@ -3,7 +3,7 @@
 <head>
   <style>
     .bg {
-      background-image: url("./images/pic2.jpg");
+      background-image: url("./images/pic2.jpeg");
       background-color: black;
       height: 1000px;
       background-position: center;
