--- a/index.html
+++ b/index.html
@@ -2,68 +2,19 @@
 <html lang="en">
 
 <head>
-  <link rel='manifest' href='./manifest.json'>
+  <title>OG</title>
   <meta charset="UTF-8">
+  <meta name="description" content="The Official website for knuckleheads">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel='manifest' href='./manifest.json'>
   <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-  <style>
-    .backimage {
-      position: relative;
-      width: 98vw;
-      height: 100vw;
-    }
-
-    .imgtxt {
-      position: absolute;
-      top: 12vw;
-      left: 65vw;
-      text-align: center;
-      color: white;
-      font-family: 'Special Elite', cursive;
-      font-size: 4.5vw;
-    }
-
-    .letsroll {
-      position: absolute;
-      top: 70vw;
-      left: 10vw;
-      border: 4px solid;
-      border-radius: 10px;
-      padding: 20px;
-      font-family: 'Special Elite', cursive;
-      font-size: 5vw;
-    }
-    
-    ,.letsroll:hover{
-      transform: scale(0.1);
-    }
-
-    .letsroll a {
-      color: white;
-    }
-
-    .aboutpage {
-      position: absolute;
-      top: 70vw;
-      left: 60vw;
-      border: 4px solid;
-      border-radius: 10px;
-      padding: 20px;
-      font-family: 'Special Elite', cursive;
-      font-size: 5vw;
-    }
-
-    .aboutpage a {
-      color: white;
-    }
-  </style>
-
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
 
   <div class="container">
-    <img src="./images/pic1.jpg" alt="gym pic" class="backimage" />
+    <img src="./images/pic1.jpeg" alt="gym pic" class="backimage" />
     <div class="imgtxt">
       <h1>The Own Gym</h1>
       <p>Pump it up.</p>
