--- a/creatine.html
+++ b/creatine.html
@@ -3,9 +3,11 @@
 <head>
 
     <title>Creatine</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 
 <body>
-    <img src="ab.jpg" align="right" height="300" width="400">
+
     <h1> CREATINE</h1>
     <p style="font-size:20px">Creatine is an organic compound with the nominal formula (H2N)(HN)CN(CH3)CH2CO2H. This
         species exists in various modifications (tautomers) in solution. Creatine is found in vertebrates where it
