--- a/glutamine.html
+++ b/glutamine.html
@@ -2,8 +2,8 @@
 
 <head>
     <title>glutamine</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<img src="cd.jpg" align="right" hieght="300" width="400">
 
 <body>
     <h1>Glutamine</h1>
