--- a/secpage.html
+++ b/secpage.html
@@ -1,31 +1,52 @@
+
 <html>
 
 <head>
   <style>
+    body {
+      margin: 0;
+    }
+
     .bg {
       background-image: url("./images/pic2.jpeg");
-      background-color: black;
-      height: 1000px;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      position: relative;
+      background-size:cover;
+      height:100vh;
+      width:100vw;
+    }
+
+    .container {
+      width: 80%;
+      margin:auto;
+      text-align: center;
+      
+    }
+
+    .container a {
+      display:inline-block;
+      margin:4vh 30vw;
+      text-decoration: none;
+      font-size:xx-large;
+      font-weight: bold;
+      font-family: 'Special Elite', cursive;
+      color: whitesmoke;
+      text-align:center;
     }
   </style>
 </head>
 
 <body>
-  <center>
-    <div class="bg">
-      <br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-      <h1><a href="thirdpage.html">Exercises</a></h1>
-      <h1><a href="dietpage.html">Diet</a></h1>
-      <h1><a href="bmi.html">BMI Calculator</a></h1>
-      <h1><a href="calorie.html">Calorie Meter</a></h1>
-      <h1><a href="basemetabolicrate.html">Base Metabolic Rate Calculator</a></h1>
-      <h1><a href="Nutrition_needed.html">Nutrition Requirements</a></h1>
+
+  <div class="bg">
+    <div class="container">
+      <a href="thirdpage.html">Exercises</a><br/>
+      <a href="dietpage.html">Diet</a><br/>
+      <a href="bmi.html">BMI Calculator</a><br/>
+      <a href="calorie.html">Calorie Meter</a><br/>
+      <a href="basemetabolicrate.html">Base Metabolic Rate Calculator</a><br/>
+      <a href="Nutrition_needed.html">Nutrition Requirements</a><br/>
     </div>
+  </div>
 </body>
-</center>
+
 
 </html>
