--- a/dietpage.html
+++ b/dietpage.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
     * {
@@ -9,7 +10,9 @@
     }
 
     body {
-      background-color: orange;
+      margin: 0;
+      line-height: 1.5;
+      background-image: linear-gradient(45deg, #cfd9df, #e2ebf0);
     }
 
     .column {
@@ -52,7 +55,7 @@
 
 <body>
 
-  <h1 id="a1" align="center">DIETS AND NUTRITIONS:- <div id="a3"><a href="Option_page.html">Go Back</a></div>
+  <h1 id="a1" align="center">DIETS AND NUTRITIONS:- <div id="a3"><a href="./secpage.html">Go Back</a></div>
   </h1>
 
   <div class="row">
