--- a/index.html
+++ b/index.html
@@ -2,39 +2,62 @@
 <html lang="en">
 
 <head>
-  <title>OG</title>
-  <meta charset="UTF-8">
-  <meta name="description" content="The Official website for knuckleheads">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel='manifest' href='./manifest.json'>
-  <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/index.css">
+    <meta charset="UTF-8">
+    <meta name="description" content="The Official website for knuckleheads">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel='manifest' href='./manifest.json'>
+    <link href="./css/index.css" rel="stylesheet">
 </head>
 
 <body>
+    <nav class="navbar">
+        <div class="container">
+            <h1>OG</h1>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="thirdpage.html">Exercises</a></li>
+                <li><a href="dietpage.html">Diet</a></li>
+                <li><a href="Nutrition_needed.html">Nutrients</a></li>
+            </ul>
+        </div>
+    </nav>
 
-  <div class="container">
-    <img src="./images/pic1.jpeg" alt="gym pic" class="backimage" />
-    <div class="imgtxt">
-      <h1>The Own Gym</h1>
-      <p>Pump it up.</p>
-    </div>
-    <div class="letsroll"><a href="secpage.html">Let's Roll</a></div>
-    <div class="aboutpage"><a href="abtpage.html">About</a></div>
-  </div>
 
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js')
-        .then(function (registration) {
-          console.log('Registered:', registration);
-        })
-        .catch(function (error) {
-          console.log('Registration failed: ', error);
-        });
-    }
-  </script>
+    <section class="center-img">
+        <div class="container-imgtxt">
+            <p>Pump it up.</p>
+        </div>
+    </section>
 
+    <section class="colms3">
+        <div>
+            <a href="bmi.html"><h4>BMI calculator</h4></a>
+            <p>Find if you are at healthy weight.</p>
+        </div>
+
+        <div>
+           <a href="calorie.html"><h4>Calorie Finder</h4></a>
+            <p>Search calories in food.</p>
+        </div>
+
+        <div>
+            <a href="basemetabolicrate.html"><h4>Base Metabolic Rate</h4></a>
+            <p>Find the calorie your body require.</p>
+        </div>
+    </section>
+
+    <!--Attaching service worker-->
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('service-worker.js')
+                .then(function (registration) {
+                    console.log('Registered:', registration);
+                })
+                .catch(function (error) {
+                    console.log('Registration failed: ', error);
+                });
+        }
+    </script>
 
 </body>
 
