--- a/calorie.html
+++ b/calorie.html
@@ -7,7 +7,6 @@
     <title>
         Calorie
     </title>
-    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script defer src="./js/caloriescript.js"></script>
     <link rel='stylesheet' href='./css/style.css'>
 </head>
@@ -18,7 +17,7 @@
         <div class="inside">
             <form>
                 Food Name : <input type='text' id="fname" />
-                <button type='button' onclick='getNameFood()'>Submit</button>
+                <button type='button' id="submitter">Submit</button>
             </form>
         </div>
     </div>
