--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='manifest' href='./manifest.json'>
     <link href="./css/index.css" rel="stylesheet">
+    <title>OG</title>
 </head>
 
 <body>
